# rgq

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  PLAN.md  README.md  SECURITY.md  TEST_PLAN.md  desing_v0.1.0.md
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml
src/: ast.rs  cli.rs  engine.rs  explain.rs  lexer.rs  main.rs  membudget.rs  normalize.rs  parser.rs  rg.rs  tree.rs
tests/: cli.rs  engine.rs  explain_golden.rs  hardening.rs  membudget.rs  tree.rs
tests/golden/: explain_aorb_and_corc.txt  explain_cat_and_dog_or_bird.txt  explain_not_cage_and_bird.txt  explain_not_cat_or_dog.txt  explain_not_not_cat.txt  explain_quoted_and_or_cat.txt  explain_unsatisfiable.txt
